# z-web

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  config.yaml  z-web
.github/workflows/: ci.yml
src/: config.rs  main.rs  php.rs  server.rs  watcher.rs
